[tool.black]
line-length = 79
exclude = '''
/(
    .git/
    | .vscode/
    | __pycache__/
    | .env
)/
'''

[tool.poetry]
name = "jabbariao-me-python"
version = "0.1.0"
description = ""
authors = ["Jaime Abbariao <jaimeabbariao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
SQLAlchemy = "^1.4.7"
psycopg2 = "^2.8.6"
uvicorn = "^0.13.4"
python-dotenv = "^0.17.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.12.0"

[tool.poetry.scripts]
start = "jabbariao_me_python.scripts:start"
create-app = "jabbariao_me_python.scripts:create_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
